Fix : Spacing in reg page

--- a/src/app/register/page.module.css
+++ b/src/app/register/page.module.css
@@ -112,7 +112,7 @@
   color: #5db3f1;
   font-family: "NightmarePills";
   font-size: 2rem;
-  margin-top: 3.5rem;
+  margin-top: 3rem;
 }
 
 .errorMessage{
